# LifeLink

./: .env.local.example  .eslintrc.json  .gitignore  AGENTVERSE_WIRING_PROMPT.md  BUILD_SUMMARY.md  CLAUDE_CODE_PROMPT.md  DEMO_SCRIPT.md  DEPLOYMENT_STATUS.md  FETCHAI_SUBMISSION.md  GETTING_STARTED.md  INTEGRATION_REPORT.md  MAP_INTEGRATION_PROMPT.md  QUICK_START.md  README.md  RECOVER_AND_MAPBOX_PROMPT.md  WIRING_GUIDE.md  browser-scraping-prompt.md  gemma-unlimited-conversation-prompt.md  package-lock.json  package.json  real-data-sourcing-prompt.md  tailwind.config.ts  tsconfig.json
agentverse-deploy/: README.md  _chat_fallback_snippet.md  aed_agent.py  agents.toml  coordinator.py  deploy.py  ems_agent.py  handoff_agent.py
app/: globals.css  layout.tsx  page.tsx  template.tsx
arduino/: pressure_sensor_rps40st.ino
backend/: README.md  main.py  requirements.txt
bus/: .env.example  .gitignore  README.md  agent1qfhcznc92h_data.json  pyproject.toml  requirements.txt
bus/coordinator/: __init__.py  agent.py  prompts.py  reasoning.py
bus/datasets/: __init__.py  la_stemi_hospitals.py  ucla_aeds.py
bus/scripts/: __init__.py  add_event_publishing.py  event_server.py  run_all.py  smoke_publish.py  sync_datasets.py  verify_setup.py
bus/shared/: __init__.py  chat.py  coverage.py  discovery.py  event_bus.py  protocols.py  scenarios.py
bus/specialists/: __init__.py  aed_agent.py  drone_agent.py  ems_agent.py  handoff_agent.py  optimizer_agent.py  triage_agent.py  voice_agent.py
components/: AgentActivityFeed.tsx  CPRQRCode.tsx  Call911Banner.tsx  DemoControls.tsx  (+8 more)
(+140 files in other folders)
